<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OfflineGameSelection">

    <Button
        android:id="@+id/btnHighscore"
        android:text="@string/highscore"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="300dp"
        android:layout_centerHorizontal="true"
    />

    <Button
        android:id="@+id/btnSingleplayer"
        android:text="@string/app_offline_singleplayer"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true"
    />

    <Button
        android:id="@+id/btnMultiplayer"
        android:text="@string/app_offline_multiplayer"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="400dp"
        android:layout_centerHorizontal="true"
    />

</RelativeLayout>