<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".PlayerNameSelection">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="75dp"
            android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:textSize="30dp"
                    android:layout_marginLeft="25dp"
                    android:layout_height="100dp"
                    android:text="@string/player_name_selection_player_one"/>

                <EditText
                    android:id="@+id/playerOneName"
                    android:layout_width="175dp"
                    android:textSize="25dp"
                    android:maxLength="14"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="175dp"
                    android:background="@color/lightGrey"
                    android:layout_height="35dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="125dp">

                <TextView
                    android:layout_width="match_parent"
                    android:textSize="30dp"
                    android:layout_marginLeft="25dp"
                    android:layout_height="100dp"
                    android:text="@string/player_name_selection_player_two"/>

                <EditText
                    android:id="@+id/playerTwoName"
                    android:layout_width="175dp"
                    android:textSize="25dp"
                    android:maxLength="14"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="175dp"
                    android:background="@color/lightGrey"
                    android:layout_height="35dp" />

        </RelativeLayout>


        <Button
            android:id="@+id/btnStartMultiplayerGame"
            android:text="@string/player_name_selection_play"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="200dp"
            android:layout_centerHorizontal="true" />


</RelativeLayout>